<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/community_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/komunitas1"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/community_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#555555"
            android:fontFamily="@font/coolvetica_ondensed_rg"
            android:text="@string/txt_nama_komunitas"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/community_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#555555"
            android:fontFamily="@font/coolvetica_ondensed_rg"
            android:text="@string/txt_deskripsi_komunitas"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/community_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="#777777"
            android:fontFamily="@font/coolvetica_ondensed_rg"
            android:text="@string/txt_alamat_komunitas"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/community_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="#777777"
            android:fontFamily="@font/coolvetica_ondensed_rg"
            android:text="@string/txt_website_komunitas"
            android:layout_marginTop="4dp"
            android:autoLink="web"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
